# docker-made-easy

./: .env.dev  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dockerfiles/: Dockerfile.v1  Dockerfile.v2  Dockerfile.v3  Dockerfile.v4  Dockerfile.v5
mysite/: settings.py
polls/: tests.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html
