[tool.poetry]
name = "docker-made-easy"
version = "0.1.0"
description = ""
authors = ["Kaleb Elwert <belak@coded.io>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
